--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,12 @@
+* {
+    box-sizing: border-box;
+}
 body {
     font-family: 'Lato', sans-serif;
     text-align: center;
     overflow-x: hidden;
+    margin: 0;
+    width: 100%;
 }
 h1, h2, h3, h4, h5, h6, p{
     font-family: 'Lato', sans-serif;
@@ -213,8 +218,6 @@ p {
     width: 60px;
     margin: 5%;
 }
-
-
 .comp-img {
     width: 90%;
     margin: 0 6% 3% 6%;
