--- a/css/styles.css
+++ b/css/styles.css
@@ -1,12 +1,7 @@
-* {
-    box-sizing: border-box;
-}
 body {
     font-family: 'Lato', sans-serif;
     text-align: center;
     overflow-x: hidden;
-    margin: 0;
-    width: 100%;
 }
 h1, h2, h3, h4, h5, h6, p{
     font-family: 'Lato', sans-serif;
@@ -174,6 +169,11 @@ p {
     padding-right: 10%;
 }
 @media (max-width: 992px){
+    html ,body {
+        width: 100%;
+        overflow-x: hidden;
+        margin: 0;
+    }
     .rotateiphone {
         position: static;
         transform: rotate(0);
