--- a/css/styles.css
+++ b/css/styles.css
@@ -177,6 +177,7 @@ p {
         width: 100%;
         overflow-x: hidden;
         margin: 0;
+        font-size: 150%;
     }
     .rotateiphone {
         position: static;
